--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -1,16 +1,69 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:context="fragments.Movie">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="fragments.Movie">
 
-    <ImageView
+    <ScrollView
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"/>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"/>
+        <RelativeLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+
+            <ImageView
+                android:id="@+id/cover"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"/>
+
+            <TextView
+                android:id="@+id/title"
+                android:textSize="30dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:gravity="left"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cover"
+                android:layout_alignParentStart="true"/>
+
+            <TextView
+                android:id="@+id/year"
+                android:textSize="20dp"
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title"
+                android:layout_alignParentStart="true"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:gravity="right"
+                android:id="@+id/tomatoMeter"
+                android:layout_below="@+id/year"
+                android:layout_alignParentStart="true"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fullText"
+                android:textSize="20dp"
+                android:layout_below="@+id/year"
+                android:layout_alignParentStart="true"
+                android:gravity="center_vertical"
+                android:paddingTop="30dp"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"/>
+
+        </RelativeLayout>
+    </ScrollView>
 </LinearLayout>
