--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 android:gravity="right"
-                android:id="@+id/tomatoMeter"
+                android:id="@+id/meter"
                 android:layout_below="@+id/year"
                 android:layout_alignParentStart="true"
                 android:paddingEnd="10dp"
