Still lots of shit, several improvements

--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -11,8 +11,8 @@
         android:fillViewport="true">
 
         <RelativeLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/cover"
@@ -21,48 +21,82 @@
 
             <TextView
                 android:id="@+id/title"
-                android:textSize="30dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:gravity="left"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_below="@+id/cover"
-                android:layout_alignParentStart="true"/>
+                android:gravity="left"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:textSize="30dp"/>
 
             <TextView
                 android:id="@+id/year"
-                android:textSize="20dp"
-                android:gravity="right"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_below="@+id/title"
-                android:layout_alignParentStart="true"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
                 android:gravity="right"
-                android:id="@+id/meter"
-                android:layout_below="@+id/year"
-                android:layout_alignParentStart="true"
                 android:paddingEnd="10dp"
-                android:paddingStart="10dp"/>
+                android:paddingStart="10dp"
+                android:textSize="20dp"/>
 
             <TextView
+                android:id="@+id/meter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/fullText"
-                android:textSize="20dp"
-                android:layout_below="@+id/year"
                 android:layout_alignParentStart="true"
-                android:gravity="center_vertical"
-                android:paddingTop="30dp"
+                android:layout_below="@+id/year"
+                android:gravity="right"
                 android:paddingEnd="10dp"
-                android:paddingStart="10dp"/>
+                android:paddingStart="10dp"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/fullText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/year"
+                android:gravity="center_vertical"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="30dp"
+                android:textSize="20dp"
+                />
+
+            <TextView
+                android:id="@+id/actors"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/fullText"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="30dp"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/awards"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/actors"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="30dp"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/director"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/awards"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="30dp"
+                android:textSize="20dp"/>
 
         </RelativeLayout>
     </ScrollView>
