--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -114,6 +114,17 @@
                 android:paddingTop="30dp"
                 android:textSize="20dp"/>
 
+            <Button
+                android:id="@+id/redraw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/director"
+                android:text="@string/next_movie"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:layout_marginTop="10dp"
+                android:textSize="20dp"/>
+
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
