--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -2,6 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:orientation="vertical"
               tools:context=".ui.fragments.Movie">
 
     <ProgressBar
@@ -110,6 +111,18 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/director"
                 android:text="@string/next_movie"
+                android:gravity="start"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:layout_marginTop="10dp"
+                android:textSize="20dp"/>
+
+            <Button
+                android:id="@+id/ignore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/redraw"
+                android:text="@string/ignore_this_movie"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:layout_marginTop="10dp"
