Improvements in design and better architecture

--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -24,7 +24,8 @@
             <ImageView
                 android:id="@+id/cover"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"/>
+                android:layout_height="400dp"
+                android:paddingBottom="10dp"/>
 
 
             <TextView
@@ -36,7 +37,7 @@
                 android:gravity="end"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/genre"
@@ -46,7 +47,7 @@
                 android:gravity="start"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/meter"
@@ -57,7 +58,7 @@
                 android:gravity="end"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/fullText"
@@ -69,7 +70,7 @@
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:paddingTop="30dp"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 />
 
             <TextView
@@ -81,7 +82,7 @@
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:paddingTop="30dp"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/awards"
@@ -92,7 +93,7 @@
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:paddingTop="30dp"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/director"
@@ -103,31 +104,48 @@
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:paddingTop="30dp"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
             <Button
                 android:id="@+id/redraw"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/director"
-                android:text="@string/next_movie"
+                android:layout_marginTop="10dp"
                 android:gravity="start"
                 android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:layout_marginTop="10dp"
-                android:textSize="20dp"/>
+                android:paddingStart="30dp"
+                android:text="@string/next_movie"
+                android:textSize="15sp"/>
 
             <Button
                 android:id="@+id/ignore"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/redraw"
-                android:text="@string/ignore_this_movie"
+                android:layout_alignBaseline="@+id/redraw"
+                android:layout_alignBottom="@+id/redraw"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/redraw"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
-                android:layout_marginTop="10dp"
-                android:textSize="20dp"/>
+                android:text="@string/ignore_this_movie"
+                android:textSize="15sp"/>
 
+            <Button
+                android:id="@+id/imdb_button"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:text="@string/view_on_imdb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/ignore"
+                android:layout_alignBottom="@+id/ignore"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/ignore"
+                android:paddingEnd="10dp"
+                android:paddingStart="10dp"
+                android:textSize="15sp"/>
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
