--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -24,8 +24,8 @@
             <ImageView
                 android:id="@+id/cover"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:paddingBottom="10dp"/>
+                android:layout_height="@dimen/big_picture"
+                android:paddingBottom="@dimen/small_padding"/>
 
 
             <TextView
@@ -35,9 +35,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/genre"
                 android:gravity="end"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:textSize="20sp"/>
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
+                android:textSize="@dimen/big_text"/>
 
             <TextView
                 android:id="@+id/genre"
@@ -45,9 +45,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/cover"
                 android:gravity="start"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:textSize="20sp"/>
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
+                android:textSize="@dimen/big_text"/>
 
             <TextView
                 android:id="@+id/meter"
@@ -56,9 +56,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/year"
                 android:gravity="end"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:textSize="20sp"/>
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
+                android:textSize="@dimen/big_text"/>
 
             <TextView
                 android:id="@+id/fullText"
@@ -67,10 +67,10 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/year"
                 android:gravity="center_vertical"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:paddingTop="30dp"
-                android:textSize="20sp"
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
+                android:paddingTop="@dimen/big_padding"
+                android:textSize="@dimen/big_text"
                 />
 
             <TextView
@@ -79,10 +79,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/fullText"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:paddingTop="30dp"
-                android:textSize="20sp"/>
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
+                android:paddingTop="@dimen/big_padding"
+                android:textSize="@dimen/big_text"/>
 
             <TextView
                 android:id="@+id/awards"
@@ -90,10 +90,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/actors"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:paddingTop="30dp"
-                android:textSize="20sp"/>
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
+                android:paddingTop="@dimen/big_padding"
+                android:textSize="@dimen/big_text"/>
 
             <TextView
                 android:id="@+id/director"
@@ -101,10 +101,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/awards"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
-                android:paddingTop="30dp"
-                android:textSize="20sp"/>
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
+                android:paddingTop="@dimen/big_padding"
+                android:textSize="@dimen/big_text"/>
 
             <Button
                 android:id="@+id/redraw"
@@ -112,12 +112,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/director"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/small_padding"
                 android:gravity="start"
-                android:paddingEnd="10dp"
-                android:paddingStart="30dp"
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/big_padding"
                 android:text="@string/next_movie"
-                android:textSize="15sp"/>
+                android:textSize="@dimen/small_text"/>
 
             <Button
                 android:id="@+id/ignore"
@@ -126,12 +126,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/redraw"
                 android:layout_alignBottom="@+id/redraw"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="@dimen/small_padding"
                 android:layout_toEndOf="@+id/redraw"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
                 android:text="@string/ignore_this_movie"
-                android:textSize="15sp"/>
+                android:textSize="@dimen/small_text"/>
 
             <Button
                 android:id="@+id/imdb_button"
@@ -140,12 +140,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/ignore"
                 android:layout_alignBottom="@+id/ignore"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="@dimen/small_padding"
                 android:layout_toEndOf="@+id/ignore"
-                android:paddingEnd="10dp"
-                android:paddingStart="10dp"
+                android:paddingEnd="@dimen/small_padding"
+                android:paddingStart="@dimen/small_padding"
                 android:text="@string/view_on_imdb"
-                android:textSize="15sp"/>
+                android:textSize="@dimen/small_text"/>
         </RelativeLayout>
     </ScrollView>
 </LinearLayout>
