--- a/app/src/main/res/menu/rolled_movie_menu.xml
+++ b/app/src/main/res/menu/rolled_movie_menu.xml
@@ -4,4 +4,8 @@
     <item
         android:id="@+id/ignored_movies_list_menu"
         android:title="@string/menu_item_ignored"/>
+    <item
+        android:id="@+id/settings_menu"
+        android:title="@string/title_activity_settings"
+        />
 </menu>
