--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -10,11 +10,13 @@
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/only_with_score_prefs_key"
+            android:summary="@string/slower_warning"
             android:textSize="@dimen/small_text"
             android:title="@string/only_with_score"/>
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/only_with_awards_prefs_key"
+            android:summary="@string/slower_warning"
             android:textSize="@dimen/small_text"
             android:title="@string/only_with_awards"/>
     </PreferenceCategory>
