--- a/app/src/main/res/layout/fragment_click_button.xml
+++ b/app/src/main/res/layout/fragment_click_button.xml
@@ -12,8 +12,8 @@
         android:layout_height="300dp"
         android:text="@string/click"
         android:background="@drawable/button"
-        android:padding="15dp"
-        android:textSize="45dp"
+        android:padding="@dimen/small_padding"
+        android:textSize="@dimen/giant_text"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
