--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="big_text">17sp</dimen>
     <dimen name="small_text">14sp</dimen>
+    <dimen name="giant_text">45sp</dimen>
     <dimen name="ignored_item">300dp</dimen>
     <dimen name="small_padding">10dp</dimen>
     <dimen name="big_padding">30dp</dimen>
