--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,7 +2,7 @@
     <item>
         <shape android:shape="oval">
             <corners android:radius="@dimen/radius"/>
-            <solid android:color="@color/colorAccent"/>
+            <solid android:color="@color/colorPrimaryDark"/>
             <size android:width="@dimen/button_size" android:height="@dimen/button_size"/>
         </shape>
     </item>
