long click menu

--- a/app/src/main/res/menu/rolled_movie_menu.xml
+++ b/app/src/main/res/menu/rolled_movie_menu.xml
@@ -6,6 +6,5 @@
         android:title="@string/menu_item_ignored"/>
     <item
         android:id="@+id/settings_menu"
-        android:title="@string/title_activity_settings"
-        />
+        android:title="@string/title_activity_settings"/>
 </menu>
